overflow fix

--- a/sources/src/main/resources/web/templates/dynamical/css/skins/dynamical-skin-purple.css
+++ b/sources/src/main/resources/web/templates/dynamical/css/skins/dynamical-skin-purple.css
@@ -12,3 +12,15 @@ color:
 	border-color: #605ca8 !important;
 	background: #605ca8 !important;
 }
+
+.baseBackgroundColor{
+	background-color: #605ca8
+}
+
+.baseColor{
+	color: #605ca8
+}
+
+.z-listheader-content{
+	color: #605ca8 !important;
+}
